--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/libTwitterImagePipeline.a.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/libTwitterImagePipeline.a.xcscheme
@@ -4,19 +4,19 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting = "YES"
+            buildForTesting = "NO"
             buildForRunning = "YES"
             buildForProfiling = "YES"
             buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B63017F1E68F9B400C9A86A"
-               BuildableName = "TIP Swift Sample App.app"
-               BlueprintName = "TIP Swift Sample App"
+               BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
+               BuildableName = "libTwitterImagePipeline.a"
+               BlueprintName = "TwitterImagePipeline"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B63017F1E68F9B400C9A86A"
-            BuildableName = "TIP Swift Sample App.app"
-            BlueprintName = "TIP Swift Sample App"
+            BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
+            BuildableName = "libTwitterImagePipeline.a"
+            BlueprintName = "TwitterImagePipeline"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -51,16 +51,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B63017F1E68F9B400C9A86A"
-            BuildableName = "TIP Swift Sample App.app"
-            BlueprintName = "TIP Swift Sample App"
+            BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
+            BuildableName = "libTwitterImagePipeline.a"
+            BlueprintName = "TwitterImagePipeline"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +69,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B63017F1E68F9B400C9A86A"
-            BuildableName = "TIP Swift Sample App.app"
-            BlueprintName = "TIP Swift Sample App"
+            BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
+            BuildableName = "libTwitterImagePipeline.a"
+            BlueprintName = "TwitterImagePipeline"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
