--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/GraphicsRendererSpeed.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/GraphicsRendererSpeed.xcscheme
@@ -3,8 +3,8 @@
    LastUpgradeVersion = "0930"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
-      buildImplicitDependencies = "NO">
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
-               BuildableName = "libTwitterImagePipeline.a"
-               BlueprintName = "TwitterImagePipeline"
-               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BA975521D77E2C900601D70"
-               BuildableName = "TIPTests.framework"
-               BlueprintName = "TIPTests"
+               BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+               BuildableName = "GraphicsRendererSpeed.app"
+               BlueprintName = "GraphicsRendererSpeed"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -42,23 +28,13 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BFBD3511AA77DB2007A08DD"
-               BuildableName = "TwitterImagePipelineTests.xctest"
-               BlueprintName = "TwitterImagePipelineTests"
-               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
-            BuildableName = "libTwitterImagePipeline.a"
-            BlueprintName = "TwitterImagePipeline"
+            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+            BuildableName = "GraphicsRendererSpeed.app"
+            BlueprintName = "GraphicsRendererSpeed"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -75,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
-            BuildableName = "libTwitterImagePipeline.a"
-            BlueprintName = "TwitterImagePipeline"
+            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+            BuildableName = "GraphicsRendererSpeed.app"
+            BlueprintName = "GraphicsRendererSpeed"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -93,15 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BFBD3461AA77DB2007A08DD"
-            BuildableName = "libTwitterImagePipeline.a"
-            BlueprintName = "TwitterImagePipeline"
+            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+            BuildableName = "GraphicsRendererSpeed.app"
+            BlueprintName = "GraphicsRendererSpeed"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
