--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TwitterImagePipeline.framework tvOS.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TwitterImagePipeline.framework tvOS.xcscheme
@@ -4,47 +4,33 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting = "NO"
+            buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
             buildForArchiving = "YES"
-            buildForAnalyzing = "NO">
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BFF17691DF5B4AD005DE734"
+               BlueprintIdentifier = "8B6511942135DE7300ED057B"
                BuildableName = "TwitterImagePipeline.framework"
-               BlueprintName = "TwitterImagePipeline.framework"
+               BlueprintName = "TwitterImagePipeline.framework tvOS"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BA975521D77E2C900601D70"
+               BlueprintIdentifier = "8B6511DE2135DEB400ED057B"
                BuildableName = "TIPTests.framework"
-               BlueprintName = "TIPTests"
-               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BFBD3511AA77DB2007A08DD"
-               BuildableName = "TwitterImagePipelineTests.xctest"
-               BlueprintName = "TwitterImagePipelineTests"
+               BlueprintName = "TIPTests tvOS"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -60,24 +46,19 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BFBD3511AA77DB2007A08DD"
-               BuildableName = "TwitterImagePipelineTests.xctest"
-               BlueprintName = "TwitterImagePipelineTests"
+               BlueprintIdentifier = "8B6512012135DFC600ED057B"
+               BuildableName = "TwitterImagePipelineTests tvOS.xctest"
+               BlueprintName = "TwitterImagePipelineTests tvOS"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
-            <SkippedTests>
-               <Test
-                  Identifier = "TIPImagePipelineTests/testFetchingJPEG2000">
-               </Test>
-            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BFF17691DF5B4AD005DE734"
+            BlueprintIdentifier = "8B6511942135DE7300ED057B"
             BuildableName = "TwitterImagePipeline.framework"
-            BlueprintName = "TwitterImagePipeline.framework"
+            BlueprintName = "TwitterImagePipeline.framework tvOS"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -97,9 +78,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BFF17691DF5B4AD005DE734"
+            BlueprintIdentifier = "8B6511942135DE7300ED057B"
             BuildableName = "TwitterImagePipeline.framework"
-            BlueprintName = "TwitterImagePipeline.framework"
+            BlueprintName = "TwitterImagePipeline.framework tvOS"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -115,9 +96,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BFF17691DF5B4AD005DE734"
+            BlueprintIdentifier = "8B6511942135DE7300ED057B"
             BuildableName = "TwitterImagePipeline.framework"
-            BlueprintName = "TwitterImagePipeline.framework"
+            BlueprintName = "TwitterImagePipeline.framework tvOS"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
