remove parallelize builds (travis can't handle it)

--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TwitterImagePipeline.framework tvOS.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TwitterImagePipeline.framework tvOS.xcscheme
@@ -43,8 +43,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8B6512012135DFC600ED057B"
