--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TIP GraphicsRendererSpeed.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TIP GraphicsRendererSpeed.xcscheme
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1010"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B6511942135DE7300ED057B"
-               BuildableName = "TwitterImagePipeline.framework"
-               BlueprintName = "TwitterImagePipeline.framework tvOS"
-               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B6511DE2135DEB400ED057B"
-               BuildableName = "TIPTests.framework"
-               BlueprintName = "TIPTests tvOS"
+               BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+               BuildableName = "GraphicsRendererSpeed.app"
+               BlueprintName = "GraphicsRendererSpeed"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -42,23 +28,13 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B6512012135DFC600ED057B"
-               BuildableName = "TwitterImagePipelineTests tvOS.xctest"
-               BlueprintName = "TwitterImagePipelineTests tvOS"
-               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6511942135DE7300ED057B"
-            BuildableName = "TwitterImagePipeline.framework"
-            BlueprintName = "TwitterImagePipeline.framework tvOS"
+            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+            BuildableName = "GraphicsRendererSpeed.app"
+            BlueprintName = "GraphicsRendererSpeed"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -75,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6511942135DE7300ED057B"
-            BuildableName = "TwitterImagePipeline.framework"
-            BlueprintName = "TwitterImagePipeline.framework tvOS"
+            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+            BuildableName = "GraphicsRendererSpeed.app"
+            BlueprintName = "GraphicsRendererSpeed"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -93,15 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B6511942135DE7300ED057B"
-            BuildableName = "TwitterImagePipeline.framework"
-            BlueprintName = "TwitterImagePipeline.framework tvOS"
+            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
+            BuildableName = "GraphicsRendererSpeed.app"
+            BlueprintName = "GraphicsRendererSpeed"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
