--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TIP ImageSpeedComparison.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TIP ImageSpeedComparison.xcscheme
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0930"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
-               BuildableName = "GraphicsRendererSpeed.app"
-               BlueprintName = "GraphicsRendererSpeed"
+               BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
+               BuildableName = "ImageSpeedComparison.app"
+               BlueprintName = "ImageSpeedComparison"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
-            BuildableName = "GraphicsRendererSpeed.app"
-            BlueprintName = "GraphicsRendererSpeed"
+            BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
+            BuildableName = "ImageSpeedComparison.app"
+            BlueprintName = "ImageSpeedComparison"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,9 +55,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
-            BuildableName = "GraphicsRendererSpeed.app"
-            BlueprintName = "GraphicsRendererSpeed"
+            BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
+            BuildableName = "ImageSpeedComparison.app"
+            BlueprintName = "ImageSpeedComparison"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -74,9 +74,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B93D8D220864CAC00CFB01A"
-            BuildableName = "GraphicsRendererSpeed.app"
-            BlueprintName = "GraphicsRendererSpeed"
+            BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
+            BuildableName = "ImageSpeedComparison.app"
+            BlueprintName = "ImageSpeedComparison"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
