--- a/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TwitterImagePipeline.framework.tvOS.xcscheme
+++ b/TwitterImagePipeline.xcodeproj/xcshareddata/xcschemes/TwitterImagePipeline.framework.tvOS.xcscheme
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0930"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
-               BuildableName = "ImageSpeedComparison.app"
-               BlueprintName = "ImageSpeedComparison"
+               BlueprintIdentifier = "8B6511942135DE7300ED057B"
+               BuildableName = "TwitterImagePipeline.framework"
+               BlueprintName = "TwitterImagePipeline.framework.tvOS"
+               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8B6511DE2135DEB400ED057B"
+               BuildableName = "TIPTests.tvOS.framework"
+               BlueprintName = "TIPTests.tvOS"
                ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,13 +42,24 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8B6512012135DFC600ED057B"
+               BuildableName = "TwitterImagePipelineTests.tvOS.xctest"
+               BlueprintName = "TwitterImagePipelineTests.tvOS"
+               ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
-            BuildableName = "ImageSpeedComparison.app"
-            BlueprintName = "ImageSpeedComparison"
+            BlueprintIdentifier = "8B6511942135DE7300ED057B"
+            BuildableName = "TwitterImagePipeline.framework"
+            BlueprintName = "TwitterImagePipeline.framework.tvOS"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -51,16 +76,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
-            BuildableName = "ImageSpeedComparison.app"
-            BlueprintName = "ImageSpeedComparison"
+            BlueprintIdentifier = "8B6511942135DE7300ED057B"
+            BuildableName = "TwitterImagePipeline.framework"
+            BlueprintName = "TwitterImagePipeline.framework.tvOS"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +94,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8BE31C821B9A1BF5009BC0B2"
-            BuildableName = "ImageSpeedComparison.app"
-            BlueprintName = "ImageSpeedComparison"
+            BlueprintIdentifier = "8B6511942135DE7300ED057B"
+            BuildableName = "TwitterImagePipeline.framework"
+            BlueprintName = "TwitterImagePipeline.framework.tvOS"
             ReferencedContainer = "container:TwitterImagePipeline.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
