--- a/BuildConfiguration/TwitterImagePipeline.framework.xcconfig
+++ b/BuildConfiguration/TwitterImagePipeline.framework.xcconfig
@@ -26,6 +26,14 @@ DYLIB_CURRENT_VERSION = $(CURRENT_PROJECT_VERSION)
 DYLIB_INSTALL_NAME_BASE = @rpath
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks @loader_path/Frameworks
 
+// 1. CoreServices is not available until iOS 12
+// 2. in Xcode11 going forward, including MobileCoreServices in the Build Phase
+//    `Link Binary With Libraries` results in a warning.
+//
+// workaround: remove from that Build Phase and link using this -framework MobileCoreServices arg
+// TODO: when min deployment target >= 12.0: delete this & place CoreServices in 'Link Binary With Libraries`
+OTHER_LDFLAGS = $(inherited) -framework MobileCoreServices
+
 // Packaging
 DEFINES_MODULE = YES
 INFOPLIST_FILE = $(PROJECT_NAME)/Info.plist
