--- a/BuildConfiguration/TwitterImagePipeline.xcconfig
+++ b/BuildConfiguration/TwitterImagePipeline.xcconfig
@@ -79,7 +79,7 @@ CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
 CLANG_WARN_INFINITE_RECURSION = YES
 CLANG_WARN_INT_CONVERSION = YES
 CLANG_WARN_NON_LITERAL_NULL_CONVERSION = YES
-CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER = YES
+CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER = YES_ERROR
 CLANG_WARN_STRICT_PROTOTYPES = YES
 CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
 CLANG_WARN_UNREACHABLE_CODE = YES
